ToolBag/ParseTool/src/parsetool/dataview/DataViewParser.java
// Generated from D:\workspace\20140311\ToolBag\ParseTool\src\parsetool\dataview\DataView.g4 by ANTLR 4.1
package parsetool.dataview;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DataViewParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__61=1, T__60=2, T__59=3, T__58=4, T__57=5, T__56=6, T__55=7, T__54=8, 
		T__53=9, T__52=10, T__51=11, T__50=12, T__49=13, T__48=14, T__47=15, T__46=16, 
		T__45=17, T__44=18, T__43=19, T__42=20, T__41=21, T__40=22, T__39=23, 
		T__38=24, T__37=25, T__36=26, T__35=27, T__34=28, T__33=29, T__32=30, 
		T__31=31, T__30=32, T__29=33, T__28=34, T__27=35, T__26=36, T__25=37, 
		T__24=38, T__23=39, T__22=40, T__21=41, T__20=42, T__19=43, T__18=44, 
		T__17=45, T__16=46, T__15=47, T__14=48, T__13=49, T__12=50, T__11=51, 
		T__10=52, T__9=53, T__8=54, T__7=55, T__6=56, T__5=57, T__4=58, T__3=59, 
		T__2=60, T__1=61, T__0=62, BOOL=63, ID=64, INT=65, FLOAT=66, COMMENT=67, 
		CODE=68, WS=69, STRING=70, OPTION_STRING=71, CHAR=72;
	public static final String[] tokenNames = {
		"<INVALID>", "'from'", "'left'", "'&'", "'except'", "'like'", "'or'", 
		"'*'", "'<'", "'!='", "'<='", "'by'", "'}'", "'between'", "'case'", "'any'", 
		"'%'", "'union'", "'on'", "')'", "'group'", "'='", "'desc'", "'!<'", "'when'", 
		"'outer'", "'having'", "'|'", "'join'", "'in'", "'select'", "','", "'-'", 
		"'not'", "'('", "'?'", "'as'", "'!>'", "'all'", "'{'", "'and'", "'order'", 
		"'else'", "'asc'", "'$'", "'some'", "'^'", "'.'", "'inner'", "'+'", "'<>'", 
		"'>'", "'exists'", "'top'", "'right'", "'then'", "'intersect'", "'where'", 
		"'/'", "'~'", "'>='", "'#'", "'end'", "BOOL", "ID", "INT", "FLOAT", "COMMENT", 
		"CODE", "WS", "STRING", "OPTION_STRING", "CHAR"
	};
	public static final int
		RULE_program = 0, RULE_select = 1, RULE_union_type = 2, RULE_select_atom = 3, 
		RULE_search_option = 4, RULE_order_clause_full = 5, RULE_order_clause = 6, 
		RULE_order_expression = 7, RULE_select_alias = 8, RULE_group_clause_full = 9, 
		RULE_group_clause = 10, RULE_having_clause_full = 11, RULE_having_clause = 12, 
		RULE_join_clause_full = 13, RULE_join_clause = 14, RULE_join_on_clause = 15, 
		RULE_all_join = 16, RULE_join = 17, RULE_inner_join = 18, RULE_left_join = 19, 
		RULE_left_outer_join = 20, RULE_right_join = 21, RULE_right_outer_join = 22, 
		RULE_select_clause_full = 23, RULE_top_clause = 24, RULE_select_clause = 25, 
		RULE_table_field_alias = 26, RULE_table_field = 27, RULE_table_field_atom = 28, 
		RULE_case_clause_field = 29, RULE_case_clause_prior = 30, RULE_case_clause = 31, 
		RULE_case_have_target_expression = 32, RULE_case_have_target_when_expression = 33, 
		RULE_case_expression = 34, RULE_case_when_expression = 35, RULE_result_expression_prior = 36, 
		RULE_result_expression = 37, RULE_case_else_expression = 38, RULE_condition_clause_prior = 39, 
		RULE_field_regular = 40, RULE_all_field = 41, RULE_table_alias = 42, RULE_table = 43, 
		RULE_from_clause_full = 44, RULE_from_clause = 45, RULE_condition_clause_full = 46, 
		RULE_condition_clause = 47, RULE_existed_compare_prior = 48, RULE_existed_compare = 49, 
		RULE_compare_complex_mix_or = 50, RULE_compare_complex_mix_and = 51, RULE_compare_complex_prior = 52, 
		RULE_compare_complex = 53, RULE_in_expression_prior = 54, RULE_in_expression = 55, 
		RULE_in_keyword = 56, RULE_in_right_value = 57, RULE_in_list = 58, RULE_select_list = 59, 
		RULE_value_list = 60, RULE_between_prior = 61, RULE_between = 62, RULE_binary_prior = 63, 
		RULE_binary = 64, RULE_binary_compare_prior = 65, RULE_binary_compare = 66, 
		RULE_predication = 67, RULE_binary_operater = 68, RULE_value = 69, RULE_parameter = 70, 
		RULE_parameter_name = 71, RULE_parameter_options = 72, RULE_option_expression = 73, 
		RULE_option_list = 74, RULE_option = 75, RULE_option_name = 76, RULE_option_value = 77, 
		RULE_condition_option = 78, RULE_long_name = 79, RULE_function_field = 80, 
		RULE_function_parameter_list = 81, RULE_function_parameter = 82, RULE_binary_expression = 83, 
		RULE_multiplicative_expression = 84, RULE_positive_expression = 85, RULE_unary_operator = 86;
	public static final String[] ruleNames = {
		"program", "select", "union_type", "select_atom", "search_option", "order_clause_full", 
		"order_clause", "order_expression", "select_alias", "group_clause_full", 
		"group_clause", "having_clause_full", "having_clause", "join_clause_full", 
		"join_clause", "join_on_clause", "all_join", "join", "inner_join", "left_join", 
		"left_outer_join", "right_join", "right_outer_join", "select_clause_full", 
		"top_clause", "select_clause", "table_field_alias", "table_field", "table_field_atom", 
		"case_clause_field", "case_clause_prior", "case_clause", "case_have_target_expression", 
		"case_have_target_when_expression", "case_expression", "case_when_expression", 
		"result_expression_prior", "result_expression", "case_else_expression", 
		"condition_clause_prior", "field_regular", "all_field", "table_alias", 
		"table", "from_clause_full", "from_clause", "condition_clause_full", "condition_clause", 
		"existed_compare_prior", "existed_compare", "compare_complex_mix_or", 
		"compare_complex_mix_and", "compare_complex_prior", "compare_complex", 
		"in_expression_prior", "in_expression", "in_keyword", "in_right_value", 
		"in_list", "select_list", "value_list", "between_prior", "between", "binary_prior", 
		"binary", "binary_compare_prior", "binary_compare", "predication", "binary_operater", 
		"value", "parameter", "parameter_name", "parameter_options", "option_expression", 
		"option_list", "option", "option_name", "option_value", "condition_option", 
		"long_name", "function_field", "function_parameter_list", "function_parameter", 
		"binary_expression", "multiplicative_expression", "positive_expression", 
		"unary_operator"
	};

	@Override
	public String getGrammarFileName() { return "DataView.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public DataViewParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public Search_optionContext search_option() {
			return getRuleContext(Search_optionContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataViewVisitor ) return ((DataViewVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			_la = _input.LA(1);
			if (_la==39) {
				{
				setState(174); search_option();
				}
			}

			setState(177); select();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectContext extends ParserRuleContext {
		public Select_atomContext select_atom(int i) {
			return getRuleContext(Select_atomContext.class,i);
		}
		public List<Select_atomContext> select_atom() {
			return getRuleContexts(Select_atomContext.class);
		}
		public Union_typeContext union_type(int i) {
			return getRuleContext(Union_typeContext.class,i);
		}
		public List<Union_typeContext> union_type() {
			return getRuleContexts(Union_typeContext.class);
		}
		public SelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).enterSelect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).exitSelect(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataViewVisitor ) return ((DataViewVisitor<? extends T>)visitor).visitSelect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectContext select() throws RecognitionException {
		SelectContext _localctx = new SelectContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_select);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179); select_atom();
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << 17) | (1L << 56))) != 0)) {
				{
				{
				setState(180); union_type();
				setState(181); select_atom();
				}
				}
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Union_typeContext extends ParserRuleContext {
		public Union_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_union_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).enterUnion_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).exitUnion_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataViewVisitor ) return ((DataViewVisitor<? extends T>)visitor).visitUnion_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Union_typeContext union_type() throws RecognitionException {
		Union_typeContext _localctx = new Union_typeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_union_type);
		try {
			setState(193);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(188); match(17);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(189); match(17);
				setState(190); match(38);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(191); match(4);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(192); match(56);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_atomContext extends ParserRuleContext {
		public Condition_clause_fullContext condition_clause_full() {
			return getRuleContext(Condition_clause_fullContext.class,0);
		}
		public Order_clause_fullContext order_clause_full() {
			return getRuleContext(Order_clause_fullContext.class,0);
		}
		public Join_clause_fullContext join_clause_full() {
			return getRuleContext(Join_clause_fullContext.class,0);
		}
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public From_clause_fullContext from_clause_full() {
			return getRuleContext(From_clause_fullContext.class,0);
		}
		public Group_clause_fullContext group_clause_full() {
			return getRuleContext(Group_clause_fullContext.class,0);
		}
		public Select_clause_fullContext select_clause_full() {
			return getRuleContext(Select_clause_fullContext.class,0);
		}
		public Select_atomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).enterSelect_atom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).exitSelect_atom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataViewVisitor ) return ((DataViewVisitor<? extends T>)visitor).visitSelect_atom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Select_atomContext select_atom() throws RecognitionException {
		Select_atomContext _localctx = new Select_atomContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_select_atom);
		int _la;
		try {
			setState(215);
			switch (_input.LA(1)) {
			case 30:
				enterOuterAlt(_localctx, 1);
				{
				setState(195); select_clause_full();
				setState(209);
				_la = _input.LA(1);
				if (_la==1) {
					{
					setState(196); from_clause_full();
					setState(198);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 2) | (1L << 28) | (1L << 48) | (1L << 54))) != 0)) {
						{
						setState(197); join_clause_full();
						}
					}

					setState(201);
					_la = _input.LA(1);
					if (_la==57) {
						{
						setState(200); condition_clause_full();
						}
					}

					setState(204);
					_la = _input.LA(1);
					if (_la==20) {
						{
						setState(203); group_clause_full();
						}
					}

					setState(207);
					_la = _input.LA(1);
					if (_la==41) {
						{
						setState(206); order_clause_full();
						}
					}

					}
				}

				}
				break;
			case 34:
				enterOuterAlt(_localctx, 2);
				{
				setState(211); match(34);
				setState(212); select();
				setState(213); match(19);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Search_optionContext extends ParserRuleContext {
		public Option_expressionContext option_expression() {
			return getRuleContext(Option_expressionContext.class,0);
		}
		public Search_optionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_search_option; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).enterSearch_option(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).exitSearch_option(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataViewVisitor ) return ((DataViewVisitor<? extends T>)visitor).visitSearch_option(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Search_optionContext search_option() throws RecognitionException {
		Search_optionContext _localctx = new Search_optionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_search_option);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(217); option_expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Order_clause_fullContext extends ParserRuleContext {
		public Order_clauseContext order_clause() {
			return getRuleContext(Order_clauseContext.class,0);
		}
		public Order_clause_fullContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_order_clause_full; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).enterOrder_clause_full(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).exitOrder_clause_full(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataViewVisitor ) return ((DataViewVisitor<? extends T>)visitor).visitOrder_clause_full(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Order_clause_fullContext order_clause_full() throws RecognitionException {
		Order_clause_fullContext _localctx = new Order_clause_fullContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_order_clause_full);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(219); match(41);
			setState(220); match(11);
			setState(221); order_clause();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Order_clauseContext extends ParserRuleContext {
		public Order_expressionContext order_expression(int i) {
			return getRuleContext(Order_expressionContext.class,i);
		}
		public List<Order_expressionContext> order_expression() {
			return getRuleContexts(Order_expressionContext.class);
		}
		public Order_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_order_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).enterOrder_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).exitOrder_clause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataViewVisitor ) return ((DataViewVisitor<? extends T>)visitor).visitOrder_clause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Order_clauseContext order_clause() throws RecognitionException {
		Order_clauseContext _localctx = new Order_clauseContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_order_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(223); order_expression();
			setState(228);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==31) {
				{
				{
				setState(224); match(31);
				setState(225); order_expression();
				}
				}
				setState(230);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Order_expressionContext extends ParserRuleContext {
		public Field_regularContext field_regular() {
			return getRuleContext(Field_regularContext.class,0);
		}
		public Order_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_order_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).enterOrder_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).exitOrder_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataViewVisitor ) return ((DataViewVisitor<? extends T>)visitor).visitOrder_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Order_expressionContext order_expression() throws RecognitionException {
		Order_expressionContext _localctx = new Order_expressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_order_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(231); field_regular();
			setState(233);
			_la = _input.LA(1);
			if (_la==22 || _la==43) {
				{
				setState(232);
				_la = _input.LA(1);
				if ( !(_la==22 || _la==43) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_aliasContext extends ParserRuleContext {
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public TerminalNode ID() { return getToken(DataViewParser.ID, 0); }
		public Select_aliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_alias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).enterSelect_alias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).exitSelect_alias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataViewVisitor ) return ((DataViewVisitor<? extends T>)visitor).visitSelect_alias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Select_aliasContext select_alias() throws RecognitionException {
		Select_aliasContext _localctx = new Select_aliasContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_select_alias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(235); match(34);
			setState(236); select();
			setState(237); match(19);
			setState(239);
			_la = _input.LA(1);
			if (_la==36) {
				{
				setState(238); match(36);
				}
			}

			setState(241); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Group_clause_fullContext extends ParserRuleContext {
		public Group_clauseContext group_clause() {
			return getRuleContext(Group_clauseContext.class,0);
		}
		public Group_clause_fullContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_group_clause_full; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).enterGroup_clause_full(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataViewListener ) ((DataViewListener)listener).exitGroup_clause_full(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataViewVisitor ) return ((DataViewVisitor<? extends T>)visitor).visitGroup_clause_full(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Group_clause_fullContext group_clause_full() throws RecognitionException {
		Group_clause_fullContext _localctx = new Group_clause_fullContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_group_clause_full);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(243); match(20);
			setState(244); match(11);
			setState(245); group_clause();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
